# zenscripter

./: .clang-format  .gitignore  AVIWrapper.h  AnimationInfo.h  CMakeLists.txt  Cargo.toml  NsaReader.h  ONScripter_effect.cpp  ONScripter_file2.cpp  Parallel.h  README.md  ScriptParser.cpp  Utils.h  build.zig  gbk2utf16.cpp  gbk2utf16.h  nsaconv.cpp  sardec.cpp  simple_aviplay.cpp  sjis2utf16.h
cpp/: AVIWrapper.cpp  AVIWrapper.h  AnimationInfo.h  DirectReader.cpp  FontInfo.h  NsaReader.cpp  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_effect.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_file2.cpp  ONScripter_rmenu.cpp  ONScripter_text.cpp  README.md  ScriptHandler.cpp  ScriptParser.cpp  ScriptParser.h  ScriptParser_command.cpp  Utils.h  gbk2utf16.h  nsaconv.cpp  nsadec.cpp  onscripter_main.cpp  sarconv.cpp  sjis2utf16.cpp
src/: AVIWrapper.cpp  AnimationInfo.cpp  BaseReader.h  ButtonLink.h  DirectReader.cpp  DirectReader.h  DirtyRect.cpp  DirtyRect.h  DirtyRect.zig  FontInfo.cpp  LUAHandler.cpp  LUAHandler.h  ONScripter.cpp  ONScripter.h  ONScripter_animation.cpp  ONScripter_command.cpp  ONScripter_directdraw.cpp  ONScripter_effect_breakup.cpp  ONScripter_event.cpp  ONScripter_file.cpp  ONScripter_image.cpp  ONScripter_lut.cpp  ONScripter_sound.cpp  ONScripter_text.cpp  SarReader.cpp  SarReader.h  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.h  ScriptParser_command.cpp  builtin_layer.h  c.zig  cli.zig  coding2utf16.cpp  coding2utf16.h  conv_shared.cpp  direct_draw.h  main.zig  nsadec.cpp  nscriptdecode.cpp  (+6 more)
